bug fix img not showing

--- a/themes/albintheme/scss/figure.scss
+++ b/themes/albintheme/scss/figure.scss
@@ -11,7 +11,6 @@
 
 .figure img {
     max-width: 100%;
-    max-height: 100%;
 }
 
 .figure figcaption {
