--- a/themes/albintheme/scss/gallery.scss
+++ b/themes/albintheme/scss/gallery.scss
@@ -29,7 +29,7 @@
 .image-box img {
     object-fit: cover;
     width: 100%;
-    height: 100%;
+    // height: 100%;
 }
 
 .embed-container {
